# shared-trip-with-friends

./: DEMO_MODE.md  OPTIMIZATION_SUMMARY.md  PAYMENT_FIX.md  PROFESSIONAL_UI_UPDATE.md  README.md  WINNING_FEATURES.md  package-lock.json  package.json  vite.config.ts
contracts/splitflow/: Cargo.toml
contracts/splitflow/src/: error.rs  lib.rs  test.rs  types.rs
docs/: README.md
src/: App.tsx  index.css  main.tsx  splitflow.css
src/components/: DebtGraph.tsx  ExpenseForm.tsx  HorizonFeed.tsx  KarmaLeaderboard.tsx  LiveBalance.tsx  LoadingSpinner.tsx  QRSplitModal.tsx  QuickActions.tsx  ReceiptScanner.tsx  SettleCard.tsx  StellarPathVisualizer.tsx
src/hooks/: useFreighter.ts  useGroup.ts  useHorizonStream.ts  useReceipt.ts  useStellarPayment.ts  useVoiceInput.ts
src/lib/: algorithm.ts  insights.ts  mockData.ts  notifications.ts  soroban.ts  stellar.ts
src/pages/: AddExpense.tsx  Group.tsx  SettleUp.tsx  SplitHome.tsx  Summary.tsx
src/types/: splitflow.ts
